examples/whereami/whereami-backend/app-repo/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whereami-backend
  labels:
    istio.io/rev: asm-managed
