examples/whereami/whereami-backend/app-repo/k8s/base/se.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: whereami-backend
spec:
  hosts:
  - whereami-backend.whereami-backend.svc.cluster.local
  ports:
  - name: whereami-backend
    number: 80
    protocol: TCP
  resolution: DNS
